--- a/src/proyecto1/coderapp/templates/estudiantes.html
+++ b/src/proyecto1/coderapp/templates/estudiantes.html
@@ -1,6 +1,6 @@
 {% extends 'padre.html' %}
 {% load static %}
 {% block contenidoQueCambia %}
-<h1>Informacion de la pagina de inicio</h1>
+<h1>Informacion de la vista de estudiantes</h1>
 <h2>Se hereda de padre.html</h2>
 {% endblock %}
