--- a/src/proyecto1/coderapp/templates/busqueda_camada.html
+++ b/src/proyecto1/coderapp/templates/busqueda_camada.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <form action="{% url 'busqueda_camada' %}" method="get">
+    <form action="{% url 'buscar_camada' %}" method="get">
         <input type="number" name="camada" id="camada">
         <input type="submit" value="Buscar">
     </form>
