Pendiente clase 22 y clase 23

--- a/src/proyecto1/coderapp/templates/cursos_list.html
+++ b/src/proyecto1/coderapp/templates/cursos_list.html
@@ -16,6 +16,7 @@
                 <a href="{% url 'Detail' curso.id %}">Ver</a>
                 <a href="{% url 'Edit' curso.id %}">Editar</a>
                 <a href="{% url 'Delete' curso.id %}">Eliminar</a>
+                <a href="{% url 'New' %}">Crear</a>
             </p>
         </li>
         {% endfor %}
