--- a/src/proyecto1/coderapp/templates/index.html
+++ b/src/proyecto1/coderapp/templates/index.html
@@ -2,5 +2,6 @@
 {% load static %}
 {% block contenidoQueCambia %}
 <h1>Informacion de la pagina de inicio</h1>
+{{mensaje}}
 <h2>Se hereda de padre.html</h2>
 {% endblock %}
