--- a/src/proyecto1/coderapp/templates/padre.html
+++ b/src/proyecto1/coderapp/templates/padre.html
@@ -29,7 +29,16 @@
             <a class="navbar-brand" href="{% url 'estudiantes' %}">Estudiantes</a>
             <a class="navbar-brand" href="{% url 'cursos' %}">Cursos</a>
             <a class="navbar-brand" href="{% url 'entregables' %}">Entregables</a>
-            <a class="btn btn-primary" href="#signup">Iniciar sesion</a>
+
+            {% if request.user.is_authenticated %}
+            <form method="post" action="{% url 'Logout' %}">
+                {%csrf_token%}
+                <button type="submit">Cerrar Sesion</button>
+            </form>
+            {% else %}
+            <a class="btn btn-primary" href="{% url 'Login'%}">Iniciar sesion</a>
+            <a class="btn btn-primary" href="{% url 'Registrar'%}">Registrarse</a>
+            {% endif %}
         </div>
     </nav>
     <!-- Masthead-->
