--- a/src/proyecto1/coderapp/templates/index.html
+++ b/src/proyecto1/coderapp/templates/index.html
@@ -4,4 +4,11 @@
 <h1>Informacion de la pagina de inicio</h1>
 {{mensaje}}
 <h2>Se hereda de padre.html</h2>
+{% if request.user.is_authenticated %}
+<div class="text-center">
+    <img height="480px" src="{{url}}">
+    <h1>Hola {{user.username}}</h1>
+</div>
+
+{% endif %}
 {% endblock %}
